# greek-study-app

./: .gitignore  README.md  index.html  manifest.webmanifest  pyproject.toml
assets/js/: app.js
assets/js/core/: constants.js  dom.js  router.js  state.js
assets/js/features/cards/: cardsActions.js  cardsEvents.js  cardsRender.js
assets/js/features/rules/: rulesActions.js  rulesEvents.js  rulesFilters.js  rulesRender.js  rulesTraining.js
assets/js/features/wordsList/: wordsListEvents.js  wordsListRender.js
assets/js/services/: ruleCardsService.js  rulesService.js  wordsService.js
assets/js/ui/: badges.js  blocks.js  buttons.js  tables.js
assets/styles/: base.css  cards.css  controls.css  layout.css  list.css  main.css  mobile.css  rules.css  tables.css
docs/: IMPLEMENTATION_PLAN.md  greek-rule-cards.json  greek-rules.json  greek-rules.updated.json  greek-words.json  greek-words.md  prompt-add-rule.md  prompt-mobile.md  prompt-rules.md  prompt.md
src/greek_study/: app.py  config.py  logging_config.py
src/greek_study/db/: __init__.py  engine.py  models.py
src/greek_study/domain/: __init__.py  scheduling.py
src/greek_study/services/: __init__.py  cards.py  extraction.py  import_export.py  ocr.py  storage.py
src/greek_study/ui/: import_tab.py  library_tab.py  main_window.py  train_tab.py
tests/: test_extraction.py  test_import_export.py  test_scheduling.py
